--- a/Intwenty.DataClient/Intwenty.DataClient.csproj
+++ b/Intwenty.DataClient/Intwenty.DataClient.csproj
@@ -11,8 +11,8 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Domitor/Intwenty.DataClient</RepositoryUrl>
     <PackageIcon>intwenty_loggo_small.png</PackageIcon>
-    <Version>1.0.2</Version>
-    <PackageReleaseNotes>- Bugfixes</PackageReleaseNotes>
+    <Version>1.0.3</Version>
+    <PackageReleaseNotes>- Bugfix, sql error lead to disposed but unclosed connection.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
