--- a/Intwenty.DataClient/Intwenty.DataClient.csproj
+++ b/Intwenty.DataClient/Intwenty.DataClient.csproj
@@ -11,8 +11,11 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Domitor/Intwenty.DataClient</RepositoryUrl>
     <PackageIcon>intwenty_loggo_small.png</PackageIcon>
-    <Version>1.1.0</Version>
-    <PackageReleaseNotes>- Introduced async versions of methods in IDataClient</PackageReleaseNotes>
+    <Version>1.1.1</Version>
+    <PackageReleaseNotes>Feature: Get entities as sql insert/update
+- string GetInsertSqlStatement(entity)
+- string GetUpdateSqlStatement(entity)
+- string GetCreateTableSqlStatement&lt;T&gt;</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
